--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 
   <div class="row">
-    <div class="col-lg-6 col-md-4 col-sm-6 bg-white text-dark "><img class="qwe" src="./img/python (4).jpeg" alt="">
+    <div class="col-lg-6 col-md-4 col-sm-6 bg-white text-dark "><img class="qwe" src="./img/f1.jpeg" alt="">
     </div>
     <div class="col-lg-6 col-md-4 col-sm-6  text-center ">
       <h3 class="iq">Data Science - ML - AI - Big Data with Cloud &amp; Tableau</h3>
@@ -205,7 +205,7 @@
     <div class="row ">
       <div class="col-lg-4">
         <div class="card" style="width: 18rem;">
-          <img src="./img/python (1).jpeg" class="card-img-top" alt="...">
+          <img src="./img/python1.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -216,7 +216,7 @@
       </div>
       <div class="col-lg-4">
         <div class="card" style="width: 18rem;">
-          <img src="./img/python (1).jpeg" class="card-img-top" alt="...">
+          <img src="./img/f2.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -227,7 +227,7 @@
       </div>
       <div class="col-lg-4">
         <div class="card" style="width: 18rem;">
-          <img src="./img/python (2).jpeg" class="card-img-top" alt="...">
+          <img src="./img/f3.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
